--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@types/node": "^18.15.12",
     "@nuxt/content": "^2.6.0",
-    "nuxt": "^3.5.0"
+    "@types/node": "^18.15.12",
+    "nuxt": "^3.5.0",
+    "nuxt-headlessui": "^1.1.4",
+    "nuxt-icon": "^0.4.1"
+  },
+  "dependencies": {
+    "less": "^4.1.3"
   }
 }
