--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nuxt-icon": "^0.4.1"
   },
   "dependencies": {
-    "less": "^4.1.3"
+    "@vueuse/nuxt": "^10.2.1",
+    "less": "^4.1.3",
+    "vue-resizable": "^2.1.7"
   }
 }
